                                                     -*- coding: utf-8 -*-
Changes for APR 1.5.0

  *) apr_socket_connect() on Windows: Handle WSAEISCONN.  PR 48736.
     [<inoue ariel-networks.com>, Jeff Trawick]

  *) z/OS: threadsafe apr_pollset_poll support for sockets [Greg Ames]

  *) Windows:  Don't obtain a mutex for buffered file I/O unless the
     file was opened with the APR_FOPEN_XTHREAD flag.  [Ivan Zhakov
     <ivan visualsvn.com>]

  *) Windows:  Create named shared memory segments under the "Local"
     namespace if the caller is unprivileged, fixing an inability of
     unprivileged callers to use apr_shm_create() with named shared
     memory segments under recent Windows.  As before, shared memory
     segments are created under the "Global" namespace for privileged
     callers.  Add apr_shm_create_ex() and apr_shm_attach_ex(), which
     provide the ability to override the normal namespace selection.
     [Jeff Trawick]

  *) Update compile settings for MINT OS.  PR 47181. [Alan Hourihane
     <alanh fairlite.co.uk>]

  *) Files and pipes on Windows:  Don't create an unused pollset when
     files and pipes are opened.  [Mladen Turk]

  *) apr_socket_timeout_set() on Windows: If the socket was in a non-
     blocking state before, disable that setting so that timeouts work.
     [Jeff Trawick]

  *) File info APIs: Fix calculation of atime and mtime on AIX. PR 51146.
     [Ruediger Pluem]

  *) Add the apr_escape interface. [Graham Leggett]

  *) Cygwin build fixes.  PRs 51016 and 55586.  [Carlo Bramini
     <carlo.bramix libero.it>] 

  *) Add apr_skiplist family. [Jim Jagielski]

  *) Add experimental cmake-based build system for Windows.  Refer to 
     README.cmake for more information.  [Jeff Trawick, Tom Donovan]

  *) Add the apr_table_getm() call, which transparently handles the
     merging of keys with multiple values. [Graham Leggett]

  *) Add apr_hash_this_key(), apr_hash_this_key_len(), and 